z-index fixes

--- a/css/bert.less
+++ b/css/bert.less
@@ -25,6 +25,9 @@ body {
             height: calc(100vh - 100px);
             margin-top: 100px;
             left: 100px;
+            max-height: 100vh;
+            min-height: 636px;
+            overflow: scroll;
         }
 
         .menu-top {
@@ -444,6 +447,7 @@ body {
             @media @media-ipad {
                 height: calc(100% - 100px);
                 max-width: 95%;
+                overflow: scroll;
             }
 
             @media @media-hd {}
@@ -631,12 +635,13 @@ body {
                     height: 100%;
                     padding: 50px 50px 0 0;
                     position: relative;
-                }                
+                }
 
                 .link.back {
                     @media @media-tablet {
                         margin-bottom: 20px;
                     }
+
                     a {
                         font-size: 1em;
                         font-weight: 300;
@@ -672,7 +677,7 @@ body {
                             font-size: 45px;
                             margin-bottom: 22px;
                         }
-                        
+
                     }
 
                     .text.subtitle {
@@ -1138,4 +1143,5 @@ a {
 
 .op0-menu {
     opacity: 0 !important;
+    max-height: 0 !important;
 }
